# cogitx-rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  quickstart.sh  requirements.txt  settings.yaml
prompts/: memory_summary_prompt.txt  rag_prompt.txt  system_prompt.txt
scripts/: quickstart.sh  setup_neo4j.py  setup_pinecone.py
src/: index_builder.py  ingestion.py  query_processor.py  reranker.py  search.py
src/api/: dependencies.py  main.py  routes.py
src/config/: settings.py
src/core/: models.py  rag_manager.py  types_and_exception.py
src/integrations/slack/: bot.py  handlers.py
src/integrations/telegram/: bot.py
src/llm/: base.py  gemini_client.py  openai_client.py  prompt_templates.py
src/storage/embeddings/: base.py  gemini_embeddings.py  huggingface_embeddings.py  local_embeddings.py  openai_embeddings.py
src/storage/graph/: entity_extractor.py  graph_builder.py  graph_retriever.py  neo4j_client.py
src/storage/memory/: cache.py  semantic_memory.py  state_manager.py  structured_memory.py
src/storage/vector_stores/: base.py  factory.py  faiss_store.py  pinecone_store.py
src/utils/: chunking_strategies.py  logger.py  prompt_loader.py  text_cleaner.py  text_extractor.py  text_processing.py
