[tool.poetry]
name = "cogitx-rag"
version = "0.1.0"
description = "Graph-based RAG system with dual-path retrieval (vector + knowledge graph)"
authors = ["CogitX Team"]
readme = "README.md"
packages = [{include = "cogitx_rag"}]

[tool.poetry.dependencies]
python = "^3.10"
# FastAPI & API
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"

# LLM Providers
openai = "^1.10.0"
google-generativeai = "^0.3.0"

# Vector Stores
pinecone-client = "^3.0.0"
faiss-cpu = "^1.7.4"

# Graph Database
neo4j = "^5.16.0"

# Embeddings & NLP
sentence-transformers = "^2.3.0"
spacy = "^3.7.0"
transformers = "^4.36.0"
torch = "^2.1.0"

# Retrieval & Ranking
rank-bm25 = "^0.2.2"

# Memory & Caching
redis = "^5.0.1"

# Utilities
numpy = "^1.26.0"
pandas = "^2.1.0"
tiktoken = "^0.5.0"
python-dotenv = "^1.0.0"
PyYAML = "^6.0.2"
httpx = "^0.26.0"
aiofiles = "^23.2.1"

# Slack Integration
slack-bolt = "^1.18.0"
slack-sdk = "^3.26.0"
python-telegram-bot = "^21.4"

# Logging & Monitoring
loguru = "^0.7.2"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
